<resources>
    <string name="app_name">Gringle</string>

    <string name="new_message_button">Create New Message</string>
    <string name="view_draft_button">View Drafts</string>me
    <string name="view_queue_button">View Queued</string>
    <string name="action_settings">Settings</string>

    <string name="save_button">Save</string>
    <string name="queue_button">Queue</string>
    <string name="delete_button">Delete</string>

    <string name="recipient_title">Recipient</string>
    <string name="date_title">Delay Date Time</string>
    <string name="time_title">Delay Send Time</string>
    <string name="content_title">Message</string>

    <string name="new_message_title">New Message</string>
    <string name="drafts_title">Drafts</string>
    <string name="queued_title">Queued</string>


    <string name="recipient_hint">Enter recipient here.</string>
    <string name="date_hint">Enter date to be delivered.</string>
    <string name="time_hint">Enter time to be delivered.</string>
    <string name="content_hint">Enter message content.</string>

    <string name="date_picker_title">Date of message.</string>
    <string name="time_picker_title">Time of message.</string>

    <!-- Possibly remove some of the below strings later -->
    <string name="new_message">New Message</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Send a delayed text message</string>
    <string name="delete_crime">Delete</string>

</resources>
