<?xml version="1.0" encoding="utf-8"?>

<!-- Activity of the create new new message button. Here the user creates a new message
Name: Kevin Cao
Course: CSC 415
Semester: Spring 2015
Instructor: Dr. Pulimood
Project name: Gringle
Description: Gringle is a delayed text messaging mobile app primarily intended
for the use of reminders
Filename: fragment_draft.xml
Description: Layout that defines the user interface for editing drafts
Last modified on: 4/5/15
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <!-- Text and blank space for user to enter the recipient's information -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipient_title"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipient_hint"/>

        <!-- Text and blank field for user to enter message to recipient -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_title"
            style="?android:listSeparatorTextViewStyle" />

        <EditText
            android:id="@+id/message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="sentences"
            android:hint="@string/content_hint"/>

        <!--Text and Button for user to change the date -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_title"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/date_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/date_hint" />

        <!-- Text and Button for the user to change the time -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_title"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
            android:id="@+id/time_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/date_hint" />

    </LinearLayout>

    <!-- Button for the user to delete the draft message -->
    <Button
        android:id="@+id/delete_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:text="@string/delete_button"/>

    <!-- Button for the user to save changes to the message -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/save_button" />

    <!-- Button for the user to queue the message for delivery -->
    <Button
        android:id="@+id/queue_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/queue_button" />

</FrameLayout>